# pr-board

./: .npmrc  README.md  kerminal-proposal-workflow.md  package.json  pnpm-lock.yaml
desktop/: PROPOSAL.md  index.html  package.json  vite.config.ts
desktop/src/: App.tsx  index.css
desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: git_ops.rs  github.rs  kerminal_binary.rs  kerminal_commands.rs  lib.rs  main.rs
desktop/src-tauri/src/kerminal/: client.rs  jsonrpc.rs  mod.rs  process.rs  types.rs
desktop/src/components/: Board.tsx  GitOps.tsx  IdeaPool.tsx  Workflow.tsx
src/: auth.ts  instrumentation.ts
src/app/: layout.tsx  page.tsx
src/app/api/pulls/: route.ts
src/components/: AuthButton.tsx  Board.tsx  DetailPanel.tsx  RequirementCard.tsx
src/lib/: github.ts  types.ts
